# agent-hub-bridges

./: .env.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bridge-claude2/: .gitignore  Makefile  README.md  go.mod  go.sum
bridge-claude2/cmd/bridge/: blocking.go  cursor.go  inventory.go  main.go  main_test.go  runner.go  telemetry.go  telemetry_test.go  worker.go
bridge-claude2/docs/: stateful-mode-design.md
bridge-codex2/: .gitignore  Makefile  go.mod  go.sum
bridge-codex2/cmd/bridge/: cursor.go  inventory.go  main.go  runner.go  telemetry.go  tracker.go  worker.go
bridge-go-claude/: .gitignore  Makefile  README.md  go.mod  go.sum
bridge-go-claude/cmd/bridge/: compact.go  cursor.go  inventory.go  journal.go  main.go  runner.go  worker.go
bridge-go-claude/docs/: stateful-mode-design.md
bridge-tmux/: Makefile  README.md  go.mod  go.sum
bridge-tmux/cmd/agenthubctl/: main.go  main_test.go  spawn.go  spawn_test.go
bridge-tmux/cmd/bridge/: fleet.go  fleet_test.go  health.go  health_test.go  main.go  main_test.go
bridge-tmux/docs/: bridges.example.json
bridge-tmux/internal/bridges/: config.go  config_test.go  registry.go  registry_test.go
bridge-tmux/internal/fleet/: config.go  config_test.go
bridge-tmux/internal/hub/: client.go  messages.go
bridge-tmux/internal/tmux/: session.go  session_test.go
docs/: design-bridge-claude-p.md  design-bridge-codex.md  design-bridge-tmux.md  design-new-persona.md  design.md  migration.md
experiments/: codex_history_check.py
scripts/: stop-bridge.sh
src/agent_hub_bridges/: __init__.py
src/agent_hub_bridges/_common/: __init__.py  base_cli.py  base_config.py  exc.py  github_iat.py  inventory.py  journal.py  prompt.py  reconnect.py
src/agent_hub_bridges/a2a/: __init__.py  __main__.py  cli.py  config.py  worker.py
src/agent_hub_bridges/claude/: CLAUDE.md  __init__.py  __main__.py  blocking_commands.py  claude_runner.py  cli.py  config.py  cursor.py  telemetry.py  worker.py
src/agent_hub_bridges/claude_p/: __init__.py  __main__.py  cli.py  config.py  engine.py  worker.py
src/agent_hub_bridges/client_codex/: __init__.py  __main__.py  cli.py  config.py  engine.py  worker.py
src/agent_hub_bridges/codex/: __init__.py  __main__.py  cli.py  config.py  engine.py  worker.py
src/agent_hub_bridges/gemini/: __init__.py  __main__.py  cli.py  config.py  engine.py  worker.py
src/agent_hub_bridges/new_persona/: __init__.py  cli.py  runner.py
src/agent_hub_bridges/slack/: __init__.py  __main__.py  cli.py  config.py  routing.py  slack_handler.py  worker.py
src/agent_hub_bridges/tmux/: __init__.py  __main__.py  cli.py  config.py  session.py  worker.py
tests/a2a/: test_cli.py  test_config.py  test_handle_one.py  test_mapping.py
tests/claude/: test_blocking_commands.py  test_claude_runner.py  test_cli.py  test_config.py  test_cursor.py  test_gap_tracker.py  test_handle_one_workdir.py  test_idle_compact_watchdog.py  test_journalled_send.py  test_startup_catchup.py  test_telemetry.py
tests/claude_p/: test_config.py  test_engine.py  test_handle_one.py  test_sigterm.py
tests/client_codex/: test_config.py  test_engine.py  test_handle_one.py
tests/codex/: test_config.py  test_engine.py  test_handle_one.py  test_worker_prompt.py
tests/common/: test_base_config.py  test_github_iat.py  test_inventory.py  test_journal.py  test_reconnect.py  test_smoke.py
tests/gemini/: test_cli.py  test_config.py  test_engine_retry.py  test_engine_settings.py  test_rate_limit_observability.py
tests/new_persona/: test_dry_run.py  test_runner.py
tests/slack/: test_cli.py  test_config.py  test_error_paths.py  test_hub_to_slack.py  test_list_participants.py  test_resubscribe.py  test_routing.py  test_slack_handler.py  test_thread_follow_up.py
