[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-hub-bridges"
version = "0.3.3"
description = "Monorepo of agent-hub bridge workers (Claude / Gemini / Slack / A2A)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "kishibashi3" },
]
keywords = ["agent-hub", "mcp", "bridge", "monorepo"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 全 bridge が必ず使う core deps だけここに置く。 bridge 固有 deps は
# [project.optional-dependencies] の各 extra へ。 user は
#   pip install "agent-hub-bridges[claude]"
# のように必要な bridge だけ pull する。
dependencies = [
    # agent-hub-sdk feat/participant-rename-52 (PR #54 — user→participant 用語統一)。
    # ParticipantNotFoundError 公開 + PeerNotFoundError alias 追加。
    # LGTM 取得済み。タグ付け後に v0.10.0 に固定する。
    "agent-hub-sdk @ git+https://github.com/kishibashi3/agent-hub-sdk.git@feat/participant-rename-52#subdirectory=python",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# 各 bridge は自分の追加依存だけここに宣言する。 全 bridge をまとめて入れたい
# 開発者は `[all]` を使う。 `[dev]` は test / lint toolchain。
claude = [
    "claude-agent-sdk>=0.1.0",
    # issue #90: OTLP span emit (observability #1)。
    # AGENT_HUB_TELEMETRY_URL 未設定時は使われない (opt-in) が、
    # インストール済みであることで bridge 起動後に動的に有効化できる。
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]
slack = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",  # slack-bolt async path に必須
]
gemini = [
    # Gemini API は `gemini` CLI (npm: @google/gemini-cli) 経由なので Python
    # 追加 deps は無し。 CLI は別途 `npm i -g @google/gemini-cli` で入れる。
]
a2a = [
    # Google LLC 公式 A2A Python SDK (= PyPI 'a2a-sdk'、 Apache-2.0、 repo
    # `a2aproject/a2a-python`)。 1.0 で API stable と謳われていないので
    # next-major guard を 入れて pin する (= 2.x が出たら breaking change
    # 想定で 明示更新)。 httpx は a2a-sdk が直接 import するので 明示。
    "a2a-sdk>=1.0.3,<2",
    "httpx>=0.27",
]
github_app = [
    # GitHub App IAT mode (issue #73): bot identity でコメントを投稿するために必要。
    # GITHUB_APP_ID / GITHUB_APP_PRIVATE_KEY / GITHUB_APP_INSTALLATION_ID が未設定の
    # 場合はこの extra がなくても動作する (PAT fallback)。
    "PyJWT[crypto]>=2.0.0",
]
client_codex = [
    # codex CLI は npm i -g @openai/codex で入れる。Python 追加 deps なし。
    # stateless (1 message = 1 subprocess)。常駐型は [codex] extra を参照。
]
codex = [
    # 新 bridge-codex (resident-process, 会話コンテキスト保持)。
    # codex CLI は npm i -g @openai/codex で入れる。Python 追加 deps なし。
]
claude_p = [
    # claude CLI は Claude Code に付属。Python 追加 deps なし。
]
all = [
    "agent-hub-bridges[claude,slack,gemini,a2a,client_codex,codex,claude_p,github_app]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
# 後方互換: 旧 repo の console script 名 (`agent-hub-bridge-<name>`) を保持。
# operator (@ope-ultp1635) と DM 合意済 (5 質問 D)。
agent-hub-bridge-claude   = "agent_hub_bridges.claude.cli:main"
agent-hub-bridge-slack    = "agent_hub_bridges.slack.cli:main"
agent-hub-bridge-gemini   = "agent_hub_bridges.gemini.cli:main"
agent-hub-bridge-a2a      = "agent_hub_bridges.a2a.cli:main"
agent-hub-client-codex    = "agent_hub_bridges.client_codex.cli:main"
agent-hub-bridge-codex    = "agent_hub_bridges.codex.cli:main"
agent-hub-bridge-claude-p = "agent_hub_bridges.claude_p.cli:main"

[project.urls]
Homepage = "https://github.com/kishibashi3/agent-hub-bridges"
Repository = "https://github.com/kishibashi3/agent-hub-bridges"
Issues = "https://github.com/kishibashi3/agent-hub-bridges/issues"
"Related: agent-hub" = "https://github.com/kishibashi3/agent-hub"
"Related: agent-hub-sdk" = "https://github.com/kishibashi3/agent-hub-sdk"

[tool.hatch.metadata]
# `agent-hub-sdk @ git+https://...` 形式の direct URL を `dependencies` に
# 書くために必須。 PyPI 公開していないので git+ で参照する運用 (SDK 側も同じ)。
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_hub_bridges"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
# slack tests に許容する style violation (= 1:1 port preserves legacy patterns):
#   N802: Slack SDK の `chat_postMessage` を mock するため method 名を camelCase で 保持
#   N818: test-internal sentinel exception (`_LoopExit`, `_Exc`) は Error suffix を 付けない
#   RUF003: 旧 test の 日本語コメント中の 全角 `＝` (= half-width に直す価値が無い)
"tests/slack/**" = ["ANN", "N802", "N818", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
